Fix content alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,12 @@ a[dtMenuItem] {
   padding: 0 20px;
 }
 
+.sidenav-container {
+  height: 100%;
+  display: grid;
+  grid-template-rows: min-content auto;
+}
+
 .sidenav-title {
   display: inline-flex;
   line-height: 44px;
@@ -55,7 +61,6 @@ a[dtMenuItem] {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
   justify-content: space-between;
 }
 
@@ -68,5 +73,6 @@ a[dtMenuItem] {
 }
 
 app-currently-pressed-keys {
+  margin-top: auto;
   width: 100%;
 }
